--- a/configs/stdgp.yaml
+++ b/configs/stdgp.yaml
@@ -1,12 +1,12 @@
 ---
-OPERATORS: [("+",2),("-",2),("*",2),("/",2)]
-MAX_DEPTH: 6
-POPULATION_SIZE: 100
-MAX_GENERATION: 20
-TOURNAMENT_SIZE: 5
-ELITISM_SIZE: 1
-LIMIT_DEPTH: 17
-VERBOSE: True
-THREADS: 5
-MODEL_NAME: "SimpleThresholdClassifier"
-FITNESS_TYPE: "WAF"
+operators: [["+",2],["-",2],["*",2],["/",2]]
+max_initial_depth: 6
+population_size: 100
+max_generation: 20
+tournament_size: 5
+elitism_size: 1
+max_depth: 17
+verbose: True
+threads: 1
+model_name: "SimpleThresholdClassifier"
+fitnessType: "WAF"
